--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - POSTGRES_DB=locations_recommender
     ports:
       - 5432:5432
+    volumes:
+      - /var/lib/postgresql/data
 
 volumes:
   yarn:
