--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "config": "^3.3.0",
     "express": "^4.17.1",
+    "google-search-results-nodejs": "^1.3.0",
     "knex": "^0.20.11",
     "node-pg-migrate": "^4.2.2",
     "nodemon": "^2.0.2",
