--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "@elastic/elasticsearch": "^7.6.1",
     "aws-sdk": "^2.657.0",
     "config": "^3.3.0",
+    "duckduckgo-images-api": "^1.0.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "google-search-results-nodejs": "^1.3.0",
     "knex": "^0.20.11",
-    "node-pg-migrate": "^4.2.2",
+    "node-fetch": "^2.6.0",
+    "node-pg-migrate": "^4.7.0",
     "nodemon": "^2.0.2",
     "p-retry": "^4.2.0",
     "pg": "^7.18.2",
     "sort-by-distance": "^1.1.0",
     "superagent": "^5.2.2",
+    "xmlhttprequest": "^1.8.0",
     "yandex-images": "^1.0.7"
   },
   "devDependencies": {
