--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -1,7 +1,37 @@
+#-----------------------------
+# (desktop)
+#-----------------------------
+
+server {
+    listen 80;
+    server_name freshplan.ru;
+    
+    #----- redirect to mobile check (starts) -----#
+    set $mobile_rewrite do_not_perform;
+
+    # this regex string is actually much longer to match more mobile devices
+    if ($http_user_agent ~* "|android|ip(ad|hone|od)|kindle") {
+        set $mobile_rewrite perform;
+    }
+
+    if ($mobile_rewrite = perform) {
+        rewrite ^ http://m.alvinalexander.com$request_uri? redirect;
+        break;
+    }
+    #----- redirect to mobile check (ends) -----#
+
+    include /etc/nginx/aa-common.conf;
+}
+
+#------------------------------
+# m.(mobile)
+#------------------------------
+
 server {
     listen 80;
     server_name freshplan.ru;
     server_tokens off;
+    #     include /etc/nginx/aa-common.conf;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -29,3 +59,11 @@ server {
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
 }
+
+
+
+
+
+
+
+
