--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.1",
     "aws-sdk": "^2.657.0",
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "config": "^3.3.0",
+    "connect-timeout": "^1.9.0",
     "duckduckgo-images-api": "^1.0.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
@@ -17,6 +20,7 @@
     "nodemon": "^2.0.2",
     "p-retry": "^4.2.0",
     "pg": "^7.18.2",
+    "request-promise": "^4.2.5",
     "sort-by-distance": "^1.1.0",
     "superagent": "^5.2.2",
     "xmlhttprequest": "^1.8.0",
