--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "connect-timeout": "^1.9.0",
     "duckduckgo-images-api": "^1.0.5",
     "express": "^4.17.1",
+    "free-google-image-search": "^1.0.0",
     "fs": "0.0.1-security",
     "google-search-results-nodejs": "^1.3.0",
+    "image-search": "0.0.1",
     "knex": "^0.20.11",
     "node-fetch": "^2.6.0",
     "node-pg-migrate": "^4.7.0",
     "nodemon": "^2.0.2",
     "p-retry": "^4.2.0",
     "pg": "^7.18.2",
+    "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "sort-by-distance": "^1.1.0",
     "superagent": "^5.2.2",
